# mkcollage

./: .gitignore  README.md  pyproject.toml
collage/: __init__.py  cli.py
mkcollage/: __init__.py  cli.py  image_ops.py  layout.py  rendering.py
